fix issue with cursor that was cut off #379

--- a/css/jquery.terminal-1.12.1.css
+++ b/css/jquery.terminal-1.12.1.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2018 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Sun, 18 Mar 2018 19:19:05 +0000
+ * Date: Sun, 18 Mar 2018 20:09:37 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -80,7 +80,7 @@ body.terminal {
 .terminal > div {
     overflow: hidden;
 }
-.terminal > iframe, .terminal .font iframe {
+.terminal > .resizer, .terminal > .font .resizer{
     position: absolute;
     left: 0;
     top: 0;
